update product list page